--- a/invitGalaRefuge.html
+++ b/invitGalaRefuge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRANKED !</title>
+    <title>Son Fort et Image</title>
     <style>
         body {
             text-align: center;
@@ -17,9 +17,9 @@
 </head>
 <body>
     <audio autoplay>
-        <source src="son.mp3" type="audio/mpeg">
+        <source src="https://raw.githubusercontent.com/Torres-A/Vanne_html/main/son.mp3 type="audio/mpeg">
         Votre navigateur ne supporte pas l'audio.
     </audio>
-    <img src="image.jpg" alt="Image affichée">
+    <img src="https://raw.githubusercontent.com/Torres-A/Vanne_html/main/image.jpg" alt="Image affichée">
 </body>
 </html>
