--- a/invitGalaRefuge.html
+++ b/invitGalaRefuge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Son Fort et Image</title>
+    <title>Pranked</title>
     <style>
         body {
             text-align: center;
